<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ArduinoUNO_webLed</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_text_on">On</string>
    <string name="button_text_off">Off</string>
    <string name="hint_input_IP">Input IP host here</string>
    <string name="text_default_host">192.168.0.109:1235</string>
    <string name="button_text_save_host">Save host</string>

</resources>
